ITS-22038 assignfeedback_structured: Fix expand/collapse arrow display

--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,18 @@
 }
 
 .criteriasets-page .criteriaset-row a[data-toggle="collapse"]::before {
-    content: url([[pix:core|t/expanded]]);
-    vertical-align: text-top;
+    background-image: url([[pix:core|t/expanded]]);
+    background-repeat: no-repeat;
+    content: '';
+    display: inline-flex;
     margin-right: 3px;
+    vertical-align: text-top;
+    width: 16px;
+    height: 16px;
 }
 
 .criteriasets-page .criteriaset-row a[data-toggle="collapse"].collapsed::before {
-    content: url([[pix:core|t/collapsed]]);
+    background-image: url([[pix:core|t/collapsed]]);
 }
 
 .criteriasets-page .criteriaset-row .criteria-data {
